<resources>
    <string name="app_name">Confession</string>
    <string name="examination_of_conscience">Examination of Conscience</string>
    <string name="commandment_title">Sins against the %1$s commandment.</string>
    <string name="exam">Exam</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="in_the_name">In the name of the Father and the Son and the Holy Spirit</string>
    <string name="amen">Amen</string>
    <string name="bless_me">Bless me Father for I have sinned.\n\nIt\'s been %1$s since my last confession</string>
    <string name="here_are">Here are my sins</string>
    <string name="next">Next</string>
    <string name="restore">Restore</string>
    <string name="gender">Gender</string>
    <string name="disclaimer">This app is intended to be used during the sacrament of reconciliation with a catholic priest only. This is not a substitute for a valid confession.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="dob">Date of Birth</string>
    <string name="sex">Sex</string>
    <string name="vocation">Vocation</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="priest">Priest</string>
    <string name="religious">Religious</string>
    <string name="last_confession">Last Confession</string>
    <string name="save">Save</string>
    <string name="person_added">User added successfully</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="incorrect_password">Password is Incorrect</string>
    <string name="examination">Examination of Conscience</string>
    <string name="title_activity_examination">Examination of Conscience</string>
    <string name="action_settings">Settings</string>
    <string name="pref_user_actOfContrition" translatable="false">actOfContrition</string>
    <string name="pref_user_lastConfession" translatable="false">lastConfession</string>
    <string name="pref_user_id" translatable="false">id</string>
    <string name="title_activity_prayers">Prayers</string>
    <string name="previous">Previous</string>
    <string name="title_activity_confession">Confession</string>
    <string name="db_name">confession.db</string>
    <string name="sign_of_the_cross">In the name of the Father, and the Son, and the Holy Spirit. Amen</string>
    <string name="null_time_since_last">Tell the priest how long it has been since your last confession. Next time we will calculate this for you</string>
    <string name="confessionNotice">This app is intended to be used during the Sacrament of Reconciliation with a Catholic priest only. This is not a substitute for a valid confession.</string>
    <string name="context_menu_count">Count - 1</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_restore">Restore Default Text</string>
    <string name="receive_absolution">Receive absolution and respond \"Amen\"</string>
    <string name="response">If the priest says \"Give thanks to the Lord for He is good\" answer \"For His mercy endures forever.\"</string>
    <string name="guide">Guide</string>
    <string name="title_activity_guide">Confession Guide</string>
    <string name="title_activity_examination2">ExaminationActivity2</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_examination_activity_switcher">Examination of Conscience</string>
    <string name="create_user">Create User</string>
    <string name="select_user">Select User</string>
    <string name="dob_button">%1$d/%2$d/%3$d</string>
    <string name="reset_count">Reset Count</string>
    <string name="slide_input_checkbox">Check Something</string>
    <string name="slide_input_edittext">Type Something here</string>
    <string name="slide_input_title">Slide: Input Demo</string>
    <string name="slide_input_description">This slide demonstrates how input is saved over orientation and slide changes</string>
    <string name="here_are_my_sins">Here are my sins</string>
    <string name="act_of_contrition">Act of Contrition</string>
    <string name="traditional_prayers">Traditional Prayers</string>
    <string name="faq">FAQ</string>
    <string name="as_said_by_popes">… As said by Popes</string>
    <string name="extracts_fulton_sheen">Extracts from Frequent Confession (Fulton Sheen)</string>
    <string name="catechism_of_the_catholic_church">Catechism of the Catholic Church</string>
    <string name="how_to_make_a_good_confession">How to Make a Good Confession</string>
    <string name="adult">Adult</string>
    <string name="teen">Teen</string>
    <string name="child">Child</string>
    <string name="remove_ad">Remove ads</string>
    <string name="remove_ads">Remove ads and help buy me a cup of coffee</string>
    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="title_activity_settings">Settings</string>
    <string name="age">Age</string>
    <string name="emptyTextView">I seem to be empty.....\n are you sure you have performed an examination of conscience?</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="date_of_next_confession">Date of next Confession</string>
    <string name="absolution">Receive absolution and say Amen</string>
    <string name="priest_saying">If the priest says \"Give thanks to the Lord for he is Good\" answer \"For His Mercy endures forever\"</string>
    <string name="cd_background_image">background image</string>
    <string name="finish_confession">Finish Confession</string>
</resources>