<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".4"
            android:contentDescription="@string/cd_background_image"
            android:scaleType="centerCrop"
            android:src="@drawable/confession_page_two" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@id/btn_finish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.TextStyle"
                    android:id="@+id/tv_act_priest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_normal"
                    android:paddingEnd="@dimen/margin_normal"
                    android:text="@string/priest_saying"
                    tools:text="If the priest asks you to say the Act of Contrition, use this or what is it's local equivalent" />

                <TextView
                    style="@style/AppTheme.TextStyle"
                    android:id="@+id/tv_act_of_contrition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:paddingStart="@dimen/margin_normal"
                    android:paddingEnd="@dimen/margin_normal"
                    tools:text="@string/large_text" />

                <TextView
                    style="@style/AppTheme.TextStyle"
                    android:id="@+id/tv_act_tv_absolution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:paddingStart="@dimen/margin_normal"
                    android:paddingEnd="@dimen/margin_normal"
                    android:text="@string/absolution"
                    tools:text="Receive absolution and say Amen" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_finish"
            style="@style/Widget.Confession.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish_confession"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
