<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@drawable/layout_background"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/cd_background_image"
        android:padding="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_cross" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_toStartOf="@+id/btn_alarm"
        android:layout_toEndOf="@id/app_icon"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/AppTheme.OverlineText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/appwidget_text"
            android:gravity="bottom"
            android:text="@string/date_of_next_confession"
            android:textSize="12sp" />

        <!--todo update at runtime-->
        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/appwidget_text"
            android:text="@string/date"
            android:textColor="@color/widget_colour" />

    </LinearLayout>

    <!--  <ImageButton
          android:id="@+id/btn_calendar"
          android:layout_width="40dp"
          android:layout_height="match_parent"
          android:layout_alignParentEnd="true"
          android:layout_marginEnd="@dimen/margin_normal"
          android:background="@android:color/transparent"
          android:src="@drawable/ic_menu" />-->

    <ImageButton
        android:id="@+id/btn_alarm"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_normal"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cd_background_image"
        android:src="@drawable/access_alarm_24dp" />

</RelativeLayout>